# third_party_sqlite

./: BUILD.gn  OAT.xml  README.OpenSource  README.md  bundle.json  sqlite.gni
ext/misc/: cksumvfs.c
include/: sqlite3.h  sqlite3ext.h  sqlite3icu.h  sqlite3sym.h  sqlite3tokenizer.h
patch/: 0001-BaselineWithHistoryOH.patch  0001-History-features-on-OH.patch  0002-Enable-and-optimize-ICU.patch  0002-busy-debug.patch  0003-Busy-debug-and-log-dump.patch  0003-suport-meta-recovery.patch  0003-support-meta-recovery.patch  0004-Enable-and-optimize-ICU.patch  0004-Support-meta-recovery.patch  0005-Enhance-dfx-ability-report-corruption-and-check-page.patch  0005-Report-corruption-when-runtime-decteted.patch  0005-Report-corruption-when-runtime-detected.patch  0006-Add-extention-cksumvfs-and-check-page.patch  0006-Support-Binlog.patch  0006-add-extention-cksumvfs-and-check-page.patch  0007-BugFix-CurrVersion.patch  0007-Bugfix-on-current-version.patch  0007-DatabaseDebugTool.patch  0007-Support-Binlog.patch  0007-SupportBinlog.patch  0008-BugFix-CurrVersion.patch  0008-Bugfix-on-current-version.patch  0008-Rekey-multi-process.patch  0009-Allow-enable-checksum-through-PRAGMA.patch  0009-Bugfix-on-current-version.patch  0010-EnableExtensionLoading-LoadCustomTokenizer.patch  0011-Bug-fixes-on-current-version.patch  0011-Support-compress-db.patch  0012-Bugfix-on-current-version.patch  0012-Not-support-pragma-key.patch  0012-enhance-rekey.patch  0013-Bugfix-on-current-version.patch  0013-Support-Binlog-Search.patch  0014-Bugfix-on-current-version.patch  BUILD.gn  apply_patch.sh
src/: shell.c  sqlite3icu.c
unittest/: BUILD.gn  common.cpp  common.h  sqlite_binlog_test.cpp  sqlite_cksum_test.cpp  sqlite_codec_rekey_test.cpp  sqlite_codec_test.cpp  sqlite_compress_test.cpp  sqlite_metadwr_test.cpp  sqlite_test.cpp
