# Copyright (c) Huawei Technologies Co., Ltd. 2019-2019. All rights reserved.

import("//build/ohos.gni")

# Lets callers do '#include <sqlite3.h>'
config("sqlite_config") {
  include_dirs = [
    "include",
    "//utils/native/base/include",
  ]
}

# This is the configuration used to build sqlite itself.
# It should not be needed outside of this library.
config("sqlite3_private_config") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]
}

group("libsqlite") {
  public_deps = [ ":sqlite" ]
}

ohos_shared_library("sqlite") {
  visibility = [ "//foundation/distributeddatamgr/*" ]
  visibility += [ "//foundation/multimodalinput/*" ]
  visibility +=
      [ "//hit/fuzzing_test/projects/multimodal_InputService_fuzzer/*" ]
  visibility += [ "//foundation/communication/*" ]
  visibility += [ "//build/common/*" ]
  visibility += [ ":*" ]
  visibility += [ "//base/security/permission/*" ]
  visibility += [ "//third_party/libsoup/*" ]

  sources = [ "src/sqlite3.c" ]

  defines = [
    "NDEBUG=1",
    "HAVE_USLEEP=1",
    "SQLITE_HAVE_ISNAN",
    "SQLITE_DEFAULT_JOURNAL_SIZE_LIMIT=1048576",
    "SQLITE_THREADSAFE=2",
    "SQLITE_TEMP_STORE=3",
    "SQLITE_POWERSAFE_OVERWRITE=1",
    "SQLITE_DEFAULT_FILE_FORMAT=4",
    "SQLITE_DEFAULT_AUTOVACUUM=1",
    "SQLITE_ENABLE_MEMORY_MANAGEMENT=1",
    "SQLITE_ENABLE_FTS3",
    "SQLITE_ENABLE_FTS4",
    "SQLITE_OMIT_COMPILEOPTION_DIAGS",
    "SQLITE_OMIT_LOAD_EXTENSION",
    "SQLITE_DEFAULT_FILE_PERMISSIONS=0600",
    "SQLITE_SECURE_DELETE",
    "SQLITE_ENABLE_BATCH_ATOMIC_WRITE",
    "USE_PREAD64",
    "fdatasync=fdatasync",
    "HAVE_MALLOC_H=1",
    "HAVE_MALLOC_USABLE_SIZE",
    "SQLITE_DIRECT_OVERFLOW_READ",
    "SQLITE_HAS_CODEC",
    "SQLITE3_HW_EXPORT_SYMBOLS",
    "SQLITE_HW_SHARED_BLOCK_OPTIMIZATION",
    "SQLITE_CODEC_ATTACH_CHANGED",
  ]
  cflags_c = [ "-fvisibility=hidden" ]
  ldflags = [ "-Wl,--exclude-libs,ALL" ]
  deps = [
    "//third_party/openssl:libcrypto_static",
    "//utils/native/base:utils",
  ]
  public_configs = [ ":sqlite_config" ]
  configs = [ ":sqlite3_private_config" ]
}

ohos_executable("sqlite3") {
  include_dirs = [ "include" ]
  sources = [
    "src/shell.c",
    "src/sqlite3.c",
  ]

  defines = [
    "NDEBUG=1",
    "HAVE_USLEEP=1",
    "SQLITE_HAVE_ISNAN",
    "SQLITE_DEFAULT_JOURNAL_SIZE_LIMIT=1048576",
    "SQLITE_THREADSAFE=2",
    "SQLITE_TEMP_STORE=3",
    "SQLITE_POWERSAFE_OVERWRITE=1",
    "SQLITE_DEFAULT_FILE_FORMAT=4",
    "SQLITE_DEFAULT_AUTOVACUUM=1",
    "SQLITE_ENABLE_MEMORY_MANAGEMENT=1",
    "SQLITE_ENABLE_FTS3",
    "SQLITE_ENABLE_FTS4",
    "SQLITE_OMIT_COMPILEOPTION_DIAGS",
    "SQLITE_OMIT_LOAD_EXTENSION",
    "SQLITE_DEFAULT_FILE_PERMISSIONS=0600",
    "SQLITE_SECURE_DELETE",
    "SQLITE_ENABLE_BATCH_ATOMIC_WRITE",
    "USE_PREAD64",
    "fdatasync=fdatasync",
    "SQLITE_DIRECT_OVERFLOW_READ",
    "SQLITE_HW_SHARED_BLOCK_OPTIMIZATION",
  ]

  cflags = [ "-Wno-error=implicit-function-declaration" ]
}
