# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

sqlite_src_dir = "//third_party/sqlite"
sqlite_dst_dir = root_out_dir + "/patched_sqlite"
sqlite_patch_dir = sqlite_src_dir + "/patch"

action("apply_patch") {
    visibility = ["*"]
    script = "${sqlite_patch_dir}/apply_patch.sh"
    inputs = ["$sqlite_src_dir"]
    outputs = [
      "$sqlite_dst_dir/ext/misc/cksumvfs.c",
      "$sqlite_dst_dir/src/shell.c",
      "$sqlite_dst_dir/src/sqlite3.c",
      "$sqlite_dst_dir/src/sqlite3icu.c",
      "$sqlite_dst_dir/include/sqlite3ext.h",
      "$sqlite_dst_dir/include/sqlite3.h",
      "$sqlite_dst_dir/include/sqlite3sym.h",
      "$sqlite_dst_dir/include/sqlite3icu.h",
      "$sqlite_dst_dir/include/sqlite3tokenizer.h",
    ]

    args = [
      rebase_path(sqlite_src_dir, root_build_dir),
      rebase_path(sqlite_dst_dir, root_build_dir),
      rebase_path(sqlite_patch_dir, root_build_dir),
    ]
}
