# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")
import("//build/ohos.gni")

module_output_path = "third_party_sqlite/third_party_sqlite"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]

  defines = [
  ]
  cflags_c = [
    "-fvisibility=hidden",
    "-Wno-implicit-fallthrough",
  ]
  if (target_os != "ios") {
    ldflags = [ "-Wl,--exclude-libs,ALL" ]
  }
}

ohos_unittest("libsqlittest") {
  module_out_path = module_output_path

  sources = [
    "./common.cpp",
    "./sqlite_cksum_test.cpp",
    "./sqlite_compress_test.cpp",
    "./sqlite_metadwr_test.cpp",
    "./sqlite_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "c_utils:utils",
    "googletest:gtest_main",
  ]

  deps = [
    "//third_party/sqlite:sqlite",
  ]
}

###############################################################################
group("unittest") {
  testonly = true

  deps = [ ":libsqlittest" ]
}